--- a/index.html
+++ b/index.html
@@ -6,29 +6,32 @@
     <title>Be My Valentine?</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
-      <div id="container">
-        <div class="image-container">
-          <img src="you&me.png" alt="" />
+      <div class="image-container">
+        <img src="you&me.png" alt="" />
+      </div>
+      <div class="question">
+        <h2>
+          <!-- Hello Nyamekye <br /> -->
+          Will you be my Valentine?
+        </h2>
+        <div class="buttons">
+          <button>Yes</button>
+          <button>No</button>
         </div>
-        <div class="question">
-          <h2>
-            <!-- Hello Nyamekye <br /> -->
-            Will you be my Valentine?
-          </h2>
-          <div class="buttons">
-            <button>Yes</button>
-            <button>No</button>
-          </div>
-        </div>
-        <div class="image-container swiper">
-          <img
-            src="WhatsApp Image 2024-02-12 at 17.28.50_2b333d68.png"
-            alt=""
-          />
-        </div>
+      </div>
+      <div class="image-container swiper">
+        <img src="WhatsApp Image 2024-02-12 at 17.28.50_2b333d68.png" alt="" />
       </div>
       <!-- <video src="CalledOut Music - DAY BY DAY [Official Lyric Video].mp4" type="video/mp4" hidden autoplay></video> -->
     </main>
